# tecday_2025

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
notebooks/: arima.ipynb  data_visualization.ipynb  gru.ipynb  moirai.ipynb
src/: arima_utils.py  data.py  model.py
