[project]
name = "tecday-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.7",
    "peakweather",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.5",
    "torch>=2.1,<2.5",
    "lightning>=2.0",
    "gluonts~=0.14.3",
    "numpy~=1.26.0",
    "scipy~=1.11.3",
    "einops==0.7.*",
    "jaxtyping~=0.2.24",
    "python-dotenv==1.0.0",
    "hydra-core==1.3",
    "orjson",
    "tensorboard",
    "multiprocess",
    "huggingface_hub>=0.23.0",
    "safetensors",
    "datasets~=2.17.1",
    "jax[cpu]",
    "uni2ts==2.0",
]

[tool.uv.sources]
peakweather = { git = "https://github.com/MeteoSwiss/PeakWeather.git" }
